# northwind_dbt

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
dash/: northwind_dbt.pbip
dash/northwind_dbt.Report/: .platform  definition.pbir  report.json
dash/northwind_dbt.SemanticModel/: .platform  diagramLayout.json
dash/northwind_dbt.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
dash/northwind_dbt.SemanticModel/definition/cultures/: pt-BR.tmdl
dash/northwind_dbt.SemanticModel/definition/tables/: DateTableTemplate_5bc9ef49-f7c5-436c-acd2-7e58abdc5648.tmdl  Dynamic Dimension.tmdl  Dynamic Measures.tmdl  Frequency.tmdl  LastUpdate.tmdl  LocalDateTable_2e6e3665-df4f-40dd-aecc-cadd93f561d6.tmdl  LocalDateTable_56ff2198-11d6-49cc-a63a-102fd04ac30b.tmdl  LocalDateTable_b7e2c6c3-6cc5-4bca-9627-3c5f9598e87f.tmdl  LocalDateTable_ea6d62c4-126b-422b-b2d6-9aad293d53de.tmdl  Measures Table.tmdl  Recency.tmdl  SelectMeasures.tmdl  dim_calendar.tmdl  dim_customers.tmdl  dim_employees.tmdl  dim_products.tmdl  fct_orders.tmdl  metrics.tmdl
northwind.sql/: add_constraint.sql
northwind_dbt/: dbt_project.yml
northwind_dbt/models/marts/: customers.sql  employees.sql  orders.sql  products.sql
northwind_dbt/models/staging/erp/: stg_erp__categories.sql  stg_erp__customers.sql  stg_erp__employees.sql  stg_erp__order_details.sql  stg_erp__orders.sql  stg_erp__products.sql  stg_erp__suppliers.sql
src/: main.py
